Lec_2.2.txt
Microsoft Windows [Version 10.0.19042.1165]
(c) Microsoft Corporation. All rights reserved.

C:\Users\ameyc>python
Python 3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> a = 10
>>> a
10
>>> b = '20'
>>> b
'20'
>>> type(b)
<class 'str'>
>>> type(a)
<class 'int'>
>>> c = int(b)
>>> c
20
>>> name = "raj"
>>> int(name)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: 'raj'
>>> int(b)
20
>>> age = input("please enter your age: ")
please enter your age: 25
>>> age
'25'
>>> int(age)
25
>>> age = int(input("please enter your age: "))
please enter your age: 34
>>> age
34
>>>
>>> if(2<3):
...     print("yes its true")
... else:
...     print("no its not true")
...
yes its true
>>> def addition(a,b):
...     print("the addition of a and b is :",a+b)
...
>>> addition(10,20)
the addition of a and b is : 30
>>> addition(10,203)
the addition of a and b is : 213
>>> addition(15,203)
the addition of a and b is : 218
>>> addition(15,45)
the addition of a and b is : 60
>>> def canIVote():
...     age = int(input("Please enter your age :")
...     if (age>=18):
  File "<stdin>", line 3
    if (age>=18):
                ^
SyntaxError: invalid syntax
>>> def canIVote():
...     age = int(input("Please enter your age :")
...     if(age>=18):
  File "<stdin>", line 3
    if(age>=18):
               ^
SyntaxError: invalid syntax
>>> def canIVote():
...     age = int(input("Please enter your age :")
...     print(age)
  File "<stdin>", line 3
    print(age)
    ^
SyntaxError: invalid syntax
>>> age = int(input("please enter your age: ")
... ;
  File "<stdin>", line 2
    ;
    ^
SyntaxError: invalid syntax
>>> def canIVote():
...     age = int(input("Please enter your age :"))
...     if(age>=18):
...             print("yes you can vote.")
...     else:
...             print("No you can not vote.")
...
>>> canIvote()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'canIvote' is not defined
>>> canIVote()
Please enter your age :45
yes you can vote.
>>> canIVote()
Please enter your age :13
No you can not vote.
>>> canIVote()
Please enter your age :10
No you can not vote.
>>> canIVote()
Please enter your age :56
yes you can vote.
>>> canIVote()
Please enter your age :56
yes you can vote.
>>>
>>> range(10)
range(0, 10)
>>> for i in range(10):
...     print(i)
...
0
1
2
3
4
5
6
7
8
9
>>> for j in range(1,5):
...     print("hello world")
...
hello world
hello world
hello world
hello world
>>> for j in range(1,5):
...     print("hello world",j)
...
hello world 1
hello world 2
hello world 3
hello world 4
>>> c = 0
>>> while(c<=5):
...     print("hello world",c)
...     c = c + 1
...
hello world 0
hello world 1
hello world 2
hello world 3
hello world 4
hello world 5
>>>